--- a/experience/index.html
+++ b/experience/index.html
@@ -37,6 +37,7 @@
                 <li><a href="/">aridan.net</a></li>
                 <li class="active"><a href="/experience/">Experience</a></li>
                 <li><a href="/projects/">Projects</a></li>
+                <li><a href="/articles/">Articles</a></li>
                 <li><a href="/contact/">Contact</a></li>
             </ul>
             <ul>
@@ -62,6 +63,7 @@
             <ul>
                 <li class="active"><a href="/experience/">Experience</a></li>
                 <li><a href="/projects/">Projects</a></li>
+                <li><a href="/articles/">Articles</a></li>
                 <li><a href="/contact/">Contact</a></li>
             </ul>
             <ul>
@@ -144,7 +146,6 @@
             <p class="icon"><i class="fa-solid fa-graduation-cap icon-background"></i></i></p>
             <div>
                 <h1 class="name">Education</h1>
-                <p class="description titleColor">I've had various jobs at a few companies. I've worked in tech repair, IT support for a municipality, and general support for an IoT company, and I'm only getting started!</p>
             </div>
         </div>
         <hr>
