--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <li class="active"><a href="/">aridan.net</a></li>
                 <li><a href="/experience/">Experience</a></li>
                 <li><a href="/projects/">Projects</a></li>
+                <li><a href="/articles/">Articles</a></li>
                 <li><a href="/contact/">Contact</a></li>
             </ul>
             <ul>
@@ -62,6 +63,7 @@
             <ul>
                 <li><a href="/experience/">Experience</a></li>
                 <li><a href="/projects/">Projects</a></li>
+                <li><a href="/articles/">Articles</a></li>
                 <li><a href="/contact/">Contact</a></li>
             </ul>
             <ul>
@@ -88,7 +90,6 @@
 
         <div class="section">
             <section class="discordWrapper" id="currentdiscord">
-
                 <div id="lanyardDiscord">
                     <div id="loading">
                         <div>
