--- a/projects/index.html
+++ b/projects/index.html
@@ -37,6 +37,7 @@
                 <li><a href="/">aridan.net</a></li>
                 <li><a href="/experience/">Experience</a></li>
                 <li class="active"><a href="/projects/">Projects</a></li>
+                <li><a href="/articles/">Articles</a></li>
                 <li><a href="/contact/">Contact</a></li>
             </ul>
             <ul>
@@ -62,6 +63,7 @@
             <ul>
                 <li><a href="/experience/">Experience</a></li>
                 <li class="active"><a href="/projects/">Projects</a></li>
+                <li><a href="/articles/">Articles</a></li>
                 <li><a href="/contact/">Contact</a></li>
             </ul>
             <ul>
