--- a/404.html
+++ b/404.html
@@ -41,7 +41,7 @@
             </ul>
             <ul>
                 <li><a href="/settings"><i class="fa-solid fa-gear" title="Settings"></i></a></li>
-                <li><a href="https://github.com/actuallyaridan/NeoFreeBird"><i class="fa-brands fa-github"
+                <li><a href="https://github.com/actuallyaridan"><i class="fa-brands fa-github"
                             title="GitHub"></i></a></li>
                 <li><a href="https://twitter.com/actuallyaridan"><i class="fa-brands fa-twitter"
                             title="Twitter"></i></a></li>
@@ -66,7 +66,7 @@
             </ul>
             <ul>
                 <li><a href="/settings"><i class="fa-solid fa-gear" title="Settings"></i></a></li>
-                <li><a href="https://github.com/actuallyaridan/NeoFreeBird"><i class="fa-brands fa-github"
+                <li><a href="https://github.com/actuallyaridan"><i class="fa-brands fa-github"
                             title="GitHub"></i></a></li>
                 <li><a href="https://twitter.com/actuallyaridan"><i class="fa-brands fa-twitter"
                             title="Twitter"></i></a></li>
