switched to webp

--- a/experience/index.html
+++ b/experience/index.html
@@ -98,7 +98,7 @@
                 <p class="section-content">At MiniFinder, I provide support over email, phone or chat, assisting customers when their GPS tracker experiences issues.</p>
             </div>
             <div class="photo-container">
-                <img class="photo" src="/assets/uploads/images/minifinder.jpg">
+                <img class="photo" src="/assets/uploads/images/minifinder.webp">
                 <div class="linkCompany">
                     <a title="minifinder.com" href="https://minifinder.com"><i class="fa-solid fa-link"></i></a><a title="MiniFinder - LinkedIn" href="https://www.linkedin.com/company/minifinder/"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
@@ -116,7 +116,7 @@
                 <p class="section-content">As an IT technician at Tingsryds municipality, I provided IT-based support for various end-users across the municipality. I also deployed computers, and rolled in mobile phones and tablets to Microsoft Intune.</p>
             </div>
             <div class="photo-container">
-                <img class="photo" src="/assets/uploads/images/tingsryd.png">
+                <img class="photo" src="/assets/uploads/images/tingsryd.webp">
                 <div class="linkCompany">
                     <a title="tingsryd.se" href="https://tingsryd.se"><i class="fa-solid fa-link"></i></a><a title="Tingsryds municipality - LinkedIn" href="https://www.linkedin.com/company/tingsryds-kommun/"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
@@ -134,7 +134,7 @@
                 <p class="section-content">In my role at IT Care Repairstore, I received, diagnosed, repaired, and returned customers computers, mobile phones and tablets. I was also responsible for keeping the website working and up-to-date.</p>
             </div>
             <div class="photo-container">
-                <img class="photo" src="/assets/uploads/images/itcare.jpg">
+                <img class="photo" src="/assets/uploads/images/itcare.webp">
                 <div class="linkCompany">
                     <a title="itcarestore.se" href="https://itcarestore.se"><i class="fa-solid fa-link"></i></a><a title="IT Care Repairstore - LinkedIn" href="https://www.linkedin.com/company/it-care-repairstore/"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
@@ -160,7 +160,7 @@
                 <p class="section-content">At Teknikum, I expanded my knowledge in regards to Windows clients along with learning how to properly use Windows Server, set up Active Directory and similar. I also learned how to setup Cisco network equipment like routers and switches. I also added a web development course to my curriculum, which helped me create my Twitter clone called Chirp, and this very website.</p>
             </div>
             <div class="photo-container">
-                <img class="photo" src="/assets/uploads/images/vaxjo.png">
+                <img class="photo" src="/assets/uploads/images/vaxjo.webp">
                 <div class="linkCompany">
                     <a title="teknikum.se" href="https://teknikum.se"><i class="fa-solid fa-link"></i>
                 </div>
