--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <main class="container">
         <div id="info" class="withBanner">
-            <img src="/assets/uploads/images/image.png" alt="A selfie where I'm in a bus in a grey t-shit." class="icon">
+            <img src="/assets/uploads/images/image.webp" alt="A selfie where I'm in a bus in a grey t-shit." class="icon">
             <div>
                 <h1 class="name">Adnan Bukvic</h1>
                 <p class="description white">a swedish <span id="techEnthu">tech
@@ -179,7 +179,7 @@
                     with an SD card! I also know a bunch of languages too!</p>
             </div>
             <div class="photo-container">
-                <img class="photo" src="/assets/uploads/images/on-bus.jpg">
+                <img class="photo" src="/assets/uploads/images/on-bus.webp">
             </div>
         </div>
         <div id="info">
@@ -201,7 +201,7 @@
             </div>
 
             <div class="photo-container">
-                <img class="photo" src="/assets/uploads/images/with-pc.jpg">
+                <img class="photo" src="/assets/uploads/images/with-pc.webp">
             </div>
         </div>
 
@@ -218,7 +218,7 @@
             </div>
 
             <div class="photo-container">
-                <img class="photo" src="/assets/uploads/images/ipod.png">
+                <img class="photo" src="/assets/uploads/images/ipod.webp">
             </div>
         </div>
     </main>
