--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <li class="active"><a href="/">aridan.net</a></li>
             </ul>
             <ul>
-                <li><button class="noUI" onclick="toggleMenu()"><i class="fa-solid fa-bars"></i></button></li>
+                  <li><button title="Menu" class="noUI" onclick="toggleMenu()"><i class="fa-solid fa-bars"></i></button></li>
             </ul>
         </div>
         <menu class="mobileMenu" id="mobileMenuID">
@@ -179,7 +179,7 @@
                     with an SD card! I also know a bunch of languages too!</p>
             </div>
             <div class="photo-container">
-                <img class="photo" src="/assets/uploads/images/on-bus.webp">
+                <img class="photo" alt="Another selfie of me in a bus." src="/assets/uploads/images/on-bus.webp">
             </div>
         </div>
         <div id="info">
@@ -201,7 +201,7 @@
             </div>
 
             <div class="photo-container">
-                <img class="photo" src="/assets/uploads/images/with-pc.webp">
+                <img class="photo" alt="Me next to my desktop computer." src="/assets/uploads/images/with-pc.webp">
             </div>
         </div>
 
@@ -218,7 +218,7 @@
             </div>
 
             <div class="photo-container">
-                <img class="photo" src="/assets/uploads/images/ipod.webp">
+                <img class="photo" alt="A third generation iPod Classic playing music." src="/assets/uploads/images/ipod.webp">
             </div>
         </div>
     </main>
