--- a/index.html
+++ b/index.html
@@ -84,7 +84,11 @@
                 <p class="description white">a swedish <span id="techEnthu">tech
                         enthusiast</span><span id="frontEndWebDev">front end web developer</span><span
                         id="backEndWebDev">back-end web developer</span><span id="itTech">IT-technician</span></p>
-                <p id="statusWrapper" class="dcloading">Connecting</p>
+                <p id="statusWrapperConnecting" class="dcloading statusWrapper"><i class="fa-solid fa-hourglass-half"></i>Connecting</p>
+                <p id="statusWrapperOnline" class="online hide statusWrapper"><i class="fa-solid fa-signal"></i>Online</p>
+                <p id="statusWrapperOffline" class="offline hide statusWrapper"><i class="fa-solid fa-umbrella-beach"></i>Not using a computer</p>
+                <p id="statusWrapperDnd" class="dnd hide statusWrapper"><i class="fa-solid fa-circle-minus"></i></i>Do not disturb</p>
+                <p id="statusWrapperIdle" class="idle hide statusWrapper"><i class="fa-solid fa-moon"></i>Doing nothing</p>
             </div>
         </div>
 
