--- a/experience/index.html
+++ b/experience/index.html
@@ -3,31 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description"
-        content="aridan.net">
+    <meta name="description" content="aridan.net">
     <meta name="keywords"
         content="aridan, actuallyaridan, adnan, bukvic, twitter, discord, lanyard, api, web, developer, front-end, back-end, it, technician, tech, enthusiast">
     <meta name="author" content="actualluaridan">
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experience - aridan.net</title>
-    <link href="favicon.png" rel="icon" id="site-icon">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="/src/css/styles.css">
+    <link rel="stylesheet" href="/src/css/settings.css">
     <link rel="stylesheet" href="/src/css/lanyard.css">
-    <script src="/src/js/general.js" async></script>
+    <script src="/src/js/general.js"></script>
     <script src="/src/js/lanyard.js" async></script>
     <script defer="" src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js"
         crossorigin="anonymous"></script>
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <meta property="og:title" content="aridan.net">
-    <meta property="og:description"
-        content="aridan.net">
-    <meta property="og:image" content="/images/image.png">
-    <meta property="og:url" content="https://aridan.net">
-    <meta name="twitter:card" content="summary_large_image">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/media/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/media/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/media/icons/favicon-16x16.png">
+    <link rel="manifest" href="/assets/media/icons/site.webmanifest">
+    <link rel="shortcut icon" href="/assets/media/icons/favicon.ico">
+
 </head>
 
 <body>
@@ -41,9 +40,10 @@
                 <li><a href="/contact/">Contact</a></li>
             </ul>
             <ul>
-                <li><a href="/settings"><i class="fa-solid fa-gear" title="Settings"></i></a></li>
-                <li><a href="https://github.com/actuallyaridan"><i class="fa-brands fa-github"
-                            title="GitHub"></i></a></li>
+                <li><button class="noUI" onClick="toggleSettings()"><i class="fa-solid fa-gear"
+                            title="Settings"></i></a></li>
+                <li><a href="https://github.com/actuallyaridan"><i class="fa-brands fa-github" title="GitHub"></i></a>
+                </li>
                 <li><a href="https://twitter.com/actuallyaridan"><i class="fa-brands fa-twitter"
                             title="Twitter"></i></a></li>
             </ul>
@@ -67,9 +67,10 @@
                 <li><a href="/contact/">Contact</a></li>
             </ul>
             <ul>
-                <li><a href="/settings"><i class="fa-solid fa-gear" title="Settings"></i></a></li>
-                <li><a href="https://github.com/actuallyaridan"><i class="fa-brands fa-github"
-                            title="GitHub"></i></a></li>
+                <li><button class="noUI" onClick="toggleSettings()"><i class="fa-solid fa-gear"
+                            title="Settings"></i></a></li>
+                <li><a href="https://github.com/actuallyaridan"><i class="fa-brands fa-github" title="GitHub"></i></a>
+                </li>
                 <li><a href="https://twitter.com/actuallyaridan"><i class="fa-brands fa-twitter"
                             title="Twitter"></i></a></li>
         </menu>
@@ -81,7 +82,9 @@
             <p class="icon"><i class="fa-solid fa-briefcase icon-background"></i></p>
             <div>
                 <h1 class="name">Career</h1>
-                <p class="description titleColor">I've had various jobs at a few companies. I've worked in tech repair, IT support for a municipality, and general support for an IoT company, and I'm only getting started!</p>
+                <p class="description titleColor">I've had various jobs at a few companies. I've worked in tech repair,
+                    IT support for a municipality, and general support for an IoT company, and I'm only getting started!
+                </p>
                 <a class="button" href="mailto:adnan@aridan.net"><i class="fa-solid fa-envelope"></i>Get in touch</a>
             </div>
         </div>
@@ -95,12 +98,15 @@
 
                     <li><i class="fa-solid fa-clock"></i>February 2025 - Present</li>
                 </ul>
-                <p class="section-content">At MiniFinder, I provide support over email, phone or chat, assisting customers when their GPS tracker experiences issues.</p>
+                <p class="section-content">At MiniFinder, I provide support over email, phone or chat, assisting
+                    customers when their GPS tracker experiences issues.</p>
             </div>
             <div class="photo-container">
                 <img class="photo" src="/assets/uploads/images/minifinder.webp">
                 <div class="linkCompany">
-                    <a title="minifinder.com" href="https://minifinder.com"><i class="fa-solid fa-link"></i></a><a title="MiniFinder - LinkedIn" href="https://www.linkedin.com/company/minifinder/"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a title="minifinder.com" href="https://minifinder.com"><i class="fa-solid fa-link"></i></a><a
+                        title="MiniFinder - LinkedIn" href="https://www.linkedin.com/company/minifinder/"><i
+                            class="fa-brands fa-linkedin-in"></i></a>
                 </div>
             </div>
         </div>
@@ -113,12 +119,17 @@
 
                     <li><i class="fa-solid fa-clock"></i>September 2024 - February 2025</li>
                 </ul>
-                <p class="section-content">As an IT technician at Tingsryds municipality, I provided IT-based support for various end-users across the municipality. I also deployed computers, and rolled in mobile phones and tablets to Microsoft Intune.</p>
+                <p class="section-content">As an IT technician at Tingsryds municipality, I provided IT-based support
+                    for various end-users across the municipality. I also deployed computers, and rolled in mobile
+                    phones and tablets to Microsoft Intune.</p>
             </div>
             <div class="photo-container">
                 <img class="photo" src="/assets/uploads/images/tingsryd.webp">
                 <div class="linkCompany">
-                    <a title="tingsryd.se" href="https://tingsryd.se"><i class="fa-solid fa-link"></i></a><a title="Tingsryds municipality - LinkedIn" href="https://www.linkedin.com/company/tingsryds-kommun/"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a title="tingsryd.se" href="https://tingsryd.se"><i class="fa-solid fa-link"></i></a><a
+                        title="Tingsryds municipality - LinkedIn"
+                        href="https://www.linkedin.com/company/tingsryds-kommun/"><i
+                            class="fa-brands fa-linkedin-in"></i></a>
                 </div>
             </div>
         </div>
@@ -131,12 +142,17 @@
 
                     <li><i class="fa-solid fa-clock"></i>November 2022 - October 2023</li>
                 </ul>
-                <p class="section-content">In my role at IT Care Repairstore, I received, diagnosed, repaired, and returned customers computers, mobile phones and tablets. I was also responsible for keeping the website working and up-to-date.</p>
+                <p class="section-content">In my role at IT Care Repairstore, I received, diagnosed, repaired, and
+                    returned customers computers, mobile phones and tablets. I was also responsible for keeping the
+                    website working and up-to-date.</p>
             </div>
             <div class="photo-container">
                 <img class="photo" src="/assets/uploads/images/itcare.webp">
                 <div class="linkCompany">
-                    <a title="itcarestore.se" href="https://itcarestore.se"><i class="fa-solid fa-link"></i></a><a title="IT Care Repairstore - LinkedIn" href="https://www.linkedin.com/company/it-care-repairstore/"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a title="itcarestore.se" href="https://itcarestore.se"><i class="fa-solid fa-link"></i></a><a
+                        title="IT Care Repairstore - LinkedIn"
+                        href="https://www.linkedin.com/company/it-care-repairstore/"><i
+                            class="fa-brands fa-linkedin-in"></i></a>
                 </div>
             </div>
         </div>
@@ -157,7 +173,10 @@
                     <li><i class="fa-solid fa-location-dot"></i>Växjö, Sweden</li>
                     <li><i class="fa-solid fa-clock"></i>August 2020 - June 2023</li>
                 </ul>
-                <p class="section-content">At Teknikum, I expanded my knowledge in regards to Windows clients along with learning how to properly use Windows Server, set up Active Directory and similar. I also learned how to setup Cisco network equipment like routers and switches. I also added a web development course to my curriculum, which helped me create my Twitter clone called Chirp, and this very website.</p>
+                <p class="section-content">At Teknikum, I expanded my knowledge in regards to Windows clients along with
+                    learning how to properly use Windows Server, set up Active Directory and similar. I also learned how
+                    to setup Cisco network equipment like routers and switches. I also added a web development course to
+                    my curriculum, which helped me create my Twitter clone called Chirp, and this very website.</p>
             </div>
             <div class="photo-container">
                 <img class="photo" src="/assets/uploads/images/vaxjo.webp">
@@ -168,20 +187,20 @@
         </div>
         <hr>
     </main>
-       
+
     <footer>
     </footer>
-    <dialog>
+    <dialog id="settingsDialog">
         <div class="modal">
             <div class="modal-content">
                 <h2>Settings</h2>
                 <div class="modalSettings">
                     <div>
-                        <h3><i class="fa-solid fa-language"></i>Language</h3>
+                        <h3><i class="fa-solid fa-globe"></i>Language</h3>
                         <div>
                             <select name="language" id="language" class="button">
                                 <option value="en" selected>English</option>
-                                <option value="sv">Swedish</option>
+                                <option value="sv">Svenska (Swedish)</option>
                             </select>
                         </div>
                     </div>
@@ -202,28 +221,79 @@
                         <h3><i class="fa-solid fa-palette"></i>Color</h3>
                         <div class="colorOptions options">
                             <input type="radio" id="red" name="accent-color" value="red">
-                            <label for="red" class="red button">Red</label>
+                            <label for="red" class="button">Red<span class="red"></span></label>
 
                             <input type="radio" id="green" name="accent-color" value="green">
-                            <label for="green" class="green button">Green</label>
+                            <label for="green" class="button">Green<span class="green"></span></label>
 
                             <input type="radio" id="blue" name="accent-color" value="blue" checked>
-                            <label for="blue" class="blue button">Blue</label>
+                            <label for="blue" class="button">Blue<span class="blue"></span></label>
+
+                            <input type="radio" id="purple" name="accent-color" value="purple">
+                            <label for="purple" class="button">Purple<span class="purple"></span></label>
 
                             <input type="radio" id="monochrome" name="accent-color" value="monochrome">
-                            <label for="monochrome" class=",monochrome button">Monochrome</label>
+                            <label for="monochrome" class="monochrome button">Monochrome</label>
+
+                            <input type="radio" id="custom" name="accent-color" value="custom">
+                            <label for="custom" class="button">Custom</label>
                         </div>
                     </div>
                     <div>
                         <h3><i class="fa-solid fa-wrench"></i>General</h3>
                         <div>
-                            <input type="checkbox" name="quirk" id="quirk1" value="quirk1">
-                            <label for="quirk1">Auto-update activities from Discord every second</label>
+                            <div class="checkbox-wrapper-51">
+                                <label for="autoUpdateActivity" class="title">Automatically update activities</label>
+                                <input type="checkbox" id="autoUpdateActivity" name="autoUpdateActivity" />
+                                <label for="autoUpdateActivity" class="toggle">
+                                    <span>
+                                        <svg width="10px" height="10px" viewBox="0 0 10 10">
+                                            <path
+                                                d="M5,1 L5,1 C2.790861,1 1,2.790861 1,5 L1,5 C1,7.209139 2.790861,9 5,9 L5,9 C7.209139,9 9,7.209139 9,5 L9,5 C9,2.790861 7.209139,1 5,1 L5,9 L5,1 Z">
+                                            </path>
+                                        </svg>
+                                    </span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <h3><i class="fa-solid fa-universal-access"></i>Accessibility</h3>
+                        <div>
+                            <div class="checkbox-wrapper-51">
+                                <label for="autoUpdateActivity" class="title">Reduce motion</label>
+                                <input type="checkbox" id="autoUpdateActivity" name="autoUpdateActivity" />
+                                <label for="autoUpdateActivity" class="toggle">
+                                    <span>
+                                        <svg width="10px" height="10px" viewBox="0 0 10 10">
+                                            <path
+                                                d="M5,1 L5,1 C2.790861,1 1,2.790861 1,5 L1,5 C1,7.209139 2.790861,9 5,9 L5,9 C7.209139,9 9,7.209139 9,5 L9,5 C9,2.790861 7.209139,1 5,1 L5,9 L5,1 Z">
+                                            </path>
+                                        </svg>
+                                    </span>
+                                </label>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="checkbox-wrapper-51">
+                                <label for="autoUpdateActivity" class="title">Reduce transparency</label>
+                                <input type="checkbox" id="autoUpdateActivity" name="autoUpdateActivity" />
+                                <label for="autoUpdateActivity" class="toggle">
+                                    <span>
+                                        <svg width="10px" height="10px" viewBox="0 0 10 10">
+                                            <path
+                                                d="M5,1 L5,1 C2.790861,1 1,2.790861 1,5 L1,5 C1,7.209139 2.790861,9 5,9 L5,9 C7.209139,9 9,7.209139 9,5 L9,5 C9,2.790861 7.209139,1 5,1 L5,9 L5,1 Z">
+                                            </path>
+                                        </svg>
+                                    </span>
+                                </label>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <p class="modalDescription">version 2.6.1</p>
                 <div class="modalButtons">
-                    <button type="button" class="button">Done</button>
+                    <button type="button" class="button" onClick="toggleSettings()">Done</button>
                     <button type="button" class="button dangerZone">Reset</button>
                 </div>
             </div>
