--- a/index.html
+++ b/index.html
@@ -11,23 +11,21 @@
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aridan.net</title>
-    <link href="favicon.png" rel="icon" id="site-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="/src/css/styles.css">
+    <link rel="stylesheet" href="/src/css/settings.css">
     <link rel="stylesheet" href="/src/css/lanyard.css">
-    <script src="/src/js/general.js" async></script>
+    <script src="/src/js/general.js"></script>
     <script src="/src/js/lanyard.js" defer></script>
     <script defer="" src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js"
         crossorigin="anonymous"></script>
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <meta property="og:title" content="aridan.net">
-    <meta property="og:description"
-        content="aridan.net">
-    <meta property="og:image" content="/images/image.png">
-    <meta property="og:url" content="https://aridan.net">
-    <meta name="twitter:card" content="summary_large_image">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/media/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/assets/media/icons/icon-192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/assets/media/icons/icon-512.png">
+    <link rel="manifest" href="/assets/media/icons/site.webmanifest">
+    <link rel="shortcut icon" href="/assets/media/icons/favicon.ico">
 </head>
 
 <body>
@@ -41,7 +39,7 @@
                 <li><a href="/contact/">Contact</a></li>
             </ul>
             <ul>
-                <li><a href="/settings"><i class="fa-solid fa-gear" title="Settings"></i></a></li>
+                <li><button class="noUI" onClick="toggleSettings()"><i class="fa-solid fa-gear" title="Settings"></i></a></li>
                 <li><a href="https://github.com/actuallyaridan"><i class="fa-brands fa-github"
                             title="GitHub"></i></a></li>
                 <li><a href="https://twitter.com/actuallyaridan"><i class="fa-brands fa-twitter"
@@ -67,7 +65,7 @@
                 <li><a href="/contact/">Contact</a></li>
             </ul>
             <ul>
-                <li><a href="/settings"><i class="fa-solid fa-gear" title="Settings"></i></a></li>
+                <li><button class="noUI" onClick="toggleSettings()"><i class="fa-solid fa-gear" title="Settings"></i></a></li>
                 <li><a href="https://github.com/actuallyaridan"><i class="fa-brands fa-github"
                             title="GitHub"></i></a></li>
                 <li><a href="https://twitter.com/actuallyaridan"><i class="fa-brands fa-twitter"
@@ -220,7 +218,7 @@
     </main>
     <footer>
     </footer>
-    <dialog style="display: none;" id="settingsDialog">
+    <dialog id="settingsDialog">
         <div class="modal">
             <div class="modal-content">
                 <h2>Settings</h2>
@@ -251,68 +249,77 @@
                         <h3><i class="fa-solid fa-palette"></i>Color</h3>
                         <div class="colorOptions options">
                             <input type="radio" id="red" name="accent-color" value="red">
-                            <label for="red" class="red button">Red</label>
+                            <label for="red" class="button">Red<span class="red"></span></label>
 
                             <input type="radio" id="green" name="accent-color" value="green">
-                            <label for="green" class="green button">Green</label>
+                            <label for="green" class="button">Green<span class="green"></span></label>
 
                             <input type="radio" id="blue" name="accent-color" value="blue" checked>
-                            <label for="blue" class="blue button">Blue</label>
+                            <label for="blue" class="button">Blue<span class="blue"></span></label>
+
+                            <input type="radio" id="purple" name="accent-color" value="purple">
+                            <label for="purple" class="button">Purple<span class="purple"></span></label>
 
                             <input type="radio" id="monochrome" name="accent-color" value="monochrome">
-                            <label for="monochrome" class=",monochrome button">Monochrome</label>
+                            <label for="monochrome" class="monochrome button">Monochrome</label>
+
+                            <input type="radio" id="custom" name="accent-color" value="custom">
+                            <label for="custom" class="button">Custom</label>
                         </div>
                     </div>
                     <div>
                         <h3><i class="fa-solid fa-wrench"></i>General</h3>
                         <div>
                             <div class="checkbox-wrapper-51">
-                                <input type="checkbox" id="autoUpdateActivity" name="autoUpdateActivity"/> 
-                                <label for="autoUpdateActivity" class="toggle"> Auto update activities every second 
-                                  <span>
-                                    <svg width="10px" height="10px" viewBox="0 0 10 10">
-                                      <path d="M5,1 L5,1 C2.790861,1 1,2.790861 1,5 L1,5 C1,7.209139 2.790861,9 5,9 L5,9 C7.209139,9 9,7.209139 9,5 L9,5 C9,2.790861 7.209139,1 5,1 L5,9 L5,1 Z"></path>
-                                    </svg>
-                                  </span>
+                                <label for="autoUpdateActivity" class="title">Automatically update activities</label>
+                                <input type="checkbox" id="autoUpdateActivity" name="autoUpdateActivity"/>
+                                <label for="autoUpdateActivity" class="toggle">
+                                    <span>
+                                        <svg width="10px" height="10px" viewBox="0 0 10 10">
+                                            <path d="M5,1 L5,1 C2.790861,1 1,2.790861 1,5 L1,5 C1,7.209139 2.790861,9 5,9 L5,9 C7.209139,9 9,7.209139 9,5 L9,5 C9,2.790861 7.209139,1 5,1 L5,9 L5,1 Z"></path>
+                                        </svg>
+                                    </span>
                                 </label>
-                              </div>
-                        </div>
+                            </div>
+                        </div>                                              
                     </div>
                     <div>
                         <h3><i class="fa-solid fa-universal-access"></i>Accessibility</h3>
+                        <div>
+                            <div class="checkbox-wrapper-51">
+                                <label for="autoUpdateActivity" class="title">Reduce motion</label>
+                                <input type="checkbox" id="autoUpdateActivity" name="autoUpdateActivity"/>
+                                <label for="autoUpdateActivity" class="toggle">
+                                    <span>
+                                        <svg width="10px" height="10px" viewBox="0 0 10 10">
+                                            <path d="M5,1 L5,1 C2.790861,1 1,2.790861 1,5 L1,5 C1,7.209139 2.790861,9 5,9 L5,9 C7.209139,9 9,7.209139 9,5 L9,5 C9,2.790861 7.209139,1 5,1 L5,9 L5,1 Z"></path>
+                                        </svg>
+                                    </span>
+                                </label>
+                            </div>
+                        </div>  
+                        <div>
+                            <div class="checkbox-wrapper-51">
+                                <label for="autoUpdateActivity" class="title">Reduce transparency</label>
+                                <input type="checkbox" id="autoUpdateActivity" name="autoUpdateActivity"/>
+                                <label for="autoUpdateActivity" class="toggle">
+                                    <span>
+                                        <svg width="10px" height="10px" viewBox="0 0 10 10">
+                                            <path d="M5,1 L5,1 C2.790861,1 1,2.790861 1,5 L1,5 C1,7.209139 2.790861,9 5,9 L5,9 C7.209139,9 9,7.209139 9,5 L9,5 C9,2.790861 7.209139,1 5,1 L5,9 L5,1 Z"></path>
+                                        </svg>
+                                    </span>
+                                </label>
+                            </div>
+                        </div>  
                     </div>
                 </div>
+                <p class="modalDescription">version 2.6.1</p>
                 <div class="modalButtons">
-                    <button type="button" class="button">Done</button>
+                    <button type="button" class="button" onClick="toggleSettings()">Done</button>
                     <button type="button" class="button dangerZone">Reset</button>
                 </div>
             </div>
     </dialog>
-    <script> 
-        document.addEventListener("DOMContentLoaded", function () {
-    const spans = Array.from(document.querySelectorAll(".description span"));
-    let currentIndex = 0;
-    let shuffledSpans = [];
-
-    function shuffleArray(array) {
-        return array.sort(() => Math.random() - 0.5);
-    }
-
-    function swapSpans() {
-        if (currentIndex === 0) {
-            shuffledSpans = shuffleArray([...spans]); // Shuffle when restarting cycle
-        }
-        spans.forEach(span => (span.style.display = "none"));
-        shuffledSpans[currentIndex].style.display = "inline";
-        currentIndex = (currentIndex + 1) % spans.length;
-    }
-
-    // Initialize first span and start interval
-    swapSpans();
-    setInterval(swapSpans, 2000);
-});
-
-    </script>
 </body>
 
 </html>
