--- a/404.html
+++ b/404.html
@@ -80,7 +80,7 @@
             <p class="icon">😵‍💫</p>
             <div>
                 <h1 class="name">I don’t know about you, but I’m feeling 404</h1>
-                <p class="description titleColor">The page you're looking for doesn't exist. Check the URL and try again. If you used a link to go here, the page it was refering to was probably deleted.</p>
+                <p class="description titleColor">The page you're looking for doesn't exist. Check the URL and try again. If you used a link to go here, the page it was referring to was probably deleted.</p>
                 <a href="/" class="button">Go back home</a>
             </div>
         </div>
