made all settings modals the same

--- a/404.html
+++ b/404.html
@@ -106,13 +106,13 @@
                         <h3><i class="fa-solid fa-paint-roller"></i>Theme</h3>
                         <div class="themeOptions options">
                             <input type="radio" id="auto" name="theme-color" value="auto" class="theme-option" checked>
-                            <label for="auto" class="auto button theme-label">Follow system</label>
+                            <label for="auto" class="auto button theme-label"><i class="fa-solid fa-laptop"></i>Follow system</label>
 
                             <input type="radio" id="light" name="theme-color" value="light" class="theme-option">
-                            <label for="light" class="light button theme-label">Light</label>
+                            <label for="light" class="light button theme-label"><i class="fa-solid fa-sun"></i>Light</label>
 
                             <input type="radio" id="dark" name="theme-color" value="dark" class="theme-option">
-                            <label for="dark" class="dark button theme-label">Dark</label>
+                            <label for="dark" class="dark button theme-label"><i class="fa-solid fa-moon"></i>Dark</label>
                         </div>
                     </div>
                     <div>
@@ -142,7 +142,7 @@
                         <div>
                             <div class="checkbox-wrapper-51">
                                 <label for="autoUpdateActivity" class="title">Automatically update activities</label>
-                                <input type="checkbox" id="autoUpdateActivity" name="autoUpdateActivity"/>
+                                <input type="checkbox" id="autoUpdateActivity" name="autoUpdateActivity" checked/>
                                 <label for="autoUpdateActivity" class="toggle">
                                     <span>
                                         <svg width="10px" height="10px" viewBox="0 0 10 10">
