--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                         <div>
                             <div class="checkbox-wrapper-51">
                                 <label for="autoUpdateActivity" class="title">Automatically update activities</label>
-                                <input type="checkbox" id="autoUpdateActivity" name="autoUpdateActivity"/>
+                                <input type="checkbox" id="autoUpdateActivity" name="autoUpdateActivity" checked/>
                                 <label for="autoUpdateActivity" class="toggle">
                                     <span>
                                         <svg width="10px" height="10px" viewBox="0 0 10 10">
