--- a/experience/index.html
+++ b/experience/index.html
@@ -210,13 +210,13 @@
                         <h3><i class="fa-solid fa-paint-roller"></i>Theme</h3>
                         <div class="themeOptions options">
                             <input type="radio" id="auto" name="theme-color" value="auto" class="theme-option" checked>
-                            <label for="auto" class="auto button theme-label">Follow system</label>
+                            <label for="auto" class="auto button theme-label"><i class="fa-solid fa-laptop"></i>Follow system</label>
 
                             <input type="radio" id="light" name="theme-color" value="light" class="theme-option">
-                            <label for="light" class="light button theme-label">Light</label>
+                            <label for="light" class="light button theme-label"><i class="fa-solid fa-sun"></i>Light</label>
 
                             <input type="radio" id="dark" name="theme-color" value="dark" class="theme-option">
-                            <label for="dark" class="dark button theme-label">Dark</label>
+                            <label for="dark" class="dark button theme-label"><i class="fa-solid fa-moon"></i>Dark</label>
                         </div>
                     </div>
                     <div>
@@ -246,51 +246,45 @@
                         <div>
                             <div class="checkbox-wrapper-51">
                                 <label for="autoUpdateActivity" class="title">Automatically update activities</label>
-                                <input type="checkbox" id="autoUpdateActivity" name="autoUpdateActivity" />
+                                <input type="checkbox" id="autoUpdateActivity" name="autoUpdateActivity" checked/>
                                 <label for="autoUpdateActivity" class="toggle">
                                     <span>
                                         <svg width="10px" height="10px" viewBox="0 0 10 10">
-                                            <path
-                                                d="M5,1 L5,1 C2.790861,1 1,2.790861 1,5 L1,5 C1,7.209139 2.790861,9 5,9 L5,9 C7.209139,9 9,7.209139 9,5 L9,5 C9,2.790861 7.209139,1 5,1 L5,9 L5,1 Z">
-                                            </path>
+                                            <path d="M5,1 L5,1 C2.790861,1 1,2.790861 1,5 L1,5 C1,7.209139 2.790861,9 5,9 L5,9 C7.209139,9 9,7.209139 9,5 L9,5 C9,2.790861 7.209139,1 5,1 L5,9 L5,1 Z"></path>
                                         </svg>
                                     </span>
                                 </label>
                             </div>
-                        </div>
+                        </div>                                              
                     </div>
                     <div>
                         <h3><i class="fa-solid fa-universal-access"></i>Accessibility</h3>
                         <div>
                             <div class="checkbox-wrapper-51">
                                 <label for="autoUpdateActivity" class="title">Reduce motion</label>
-                                <input type="checkbox" id="autoUpdateActivity" name="autoUpdateActivity" />
+                                <input type="checkbox" id="autoUpdateActivity" name="autoUpdateActivity"/>
                                 <label for="autoUpdateActivity" class="toggle">
                                     <span>
                                         <svg width="10px" height="10px" viewBox="0 0 10 10">
-                                            <path
-                                                d="M5,1 L5,1 C2.790861,1 1,2.790861 1,5 L1,5 C1,7.209139 2.790861,9 5,9 L5,9 C7.209139,9 9,7.209139 9,5 L9,5 C9,2.790861 7.209139,1 5,1 L5,9 L5,1 Z">
-                                            </path>
+                                            <path d="M5,1 L5,1 C2.790861,1 1,2.790861 1,5 L1,5 C1,7.209139 2.790861,9 5,9 L5,9 C7.209139,9 9,7.209139 9,5 L9,5 C9,2.790861 7.209139,1 5,1 L5,9 L5,1 Z"></path>
                                         </svg>
                                     </span>
                                 </label>
                             </div>
-                        </div>
+                        </div>  
                         <div>
                             <div class="checkbox-wrapper-51">
                                 <label for="autoUpdateActivity" class="title">Reduce transparency</label>
-                                <input type="checkbox" id="autoUpdateActivity" name="autoUpdateActivity" />
+                                <input type="checkbox" id="autoUpdateActivity" name="autoUpdateActivity"/>
                                 <label for="autoUpdateActivity" class="toggle">
                                     <span>
                                         <svg width="10px" height="10px" viewBox="0 0 10 10">
-                                            <path
-                                                d="M5,1 L5,1 C2.790861,1 1,2.790861 1,5 L1,5 C1,7.209139 2.790861,9 5,9 L5,9 C7.209139,9 9,7.209139 9,5 L9,5 C9,2.790861 7.209139,1 5,1 L5,9 L5,1 Z">
-                                            </path>
+                                            <path d="M5,1 L5,1 C2.790861,1 1,2.790861 1,5 L1,5 C1,7.209139 2.790861,9 5,9 L5,9 C7.209139,9 9,7.209139 9,5 L9,5 C9,2.790861 7.209139,1 5,1 L5,9 L5,1 Z"></path>
                                         </svg>
                                     </span>
                                 </label>
                             </div>
-                        </div>
+                        </div>  
                     </div>
                 </div>
                 <p class="modalDescription">version 2.6.1</p>
