added incomplete lanyard article

--- a/404.html
+++ b/404.html
@@ -35,14 +35,14 @@
 <body>
     <header id="desktop-header">
         <div>
-            <ul>
+            <ul class="notAList">
                 <li><a href="/">aridan.net</a></li>
                 <li><a href="/experience/">Experience</a></li>
                 <li><a href="/projects/">Projects</a></li>
                 <li><a href="/articles/">Articles</a></li>
                 <li><a href="/contact/">Contact</a></li>
             </ul>
-            <ul>
+            <ul class="notAList">
                 <li><button class="noUI" onClick="toggleSettings()"><i class="fa-solid fa-gear" title="Settings"></i></a></li>
                 <li><a href="https://github.com/actuallyaridan"><i class="fa-brands fa-github"
                             title="GitHub"></i></a></li>
@@ -54,21 +54,21 @@
 
     <header id="mobile-header">
         <div>
-            <ul>
+            <ul class="notAList">
                 <li><a href="/">aridan.net</a></li>
             </ul>
-            <ul>
+            <ul class="notAList">
                   <li><button title="Menu" class="noUI" onclick="toggleMenu()"><i class="fa-solid fa-bars"></i></button></li>
             </ul>
         </div>
         <menu class="mobileMenu" id="mobileMenuID">
-            <ul>
+            <ul class="notAList">
                 <li><a href="/experience/">Experience</a></li>
                 <li><a href="/projects/">Projects</a></li>
                 <li><a href="/articles/">Articles</a></li>
                 <li><a href="/contact/">Contact</a></li>
             </ul>
-            <ul>
+            <ul class="notAList">
                 <li><button class="noUI" onClick="toggleSettings()"><i class="fa-solid fa-gear" title="Settings"></i></a></li>
                 <li><a href="https://github.com/actuallyaridan"><i class="fa-brands fa-github"
                             title="GitHub"></i></a></li>
